--- a/john.html
+++ b/john.html
@@ -26,7 +26,7 @@
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
             <span class="d-block d-lg-none">John Chen</span>
             <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2"
-                    src="assets/img/profile_john.jpg" alt="" /></span>
+                    src="assets/img/profile_john3.jpg" alt="" /></span>
 
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -124,9 +124,9 @@
         <section class="resume-section" id="projects">
             <div class="resume-section-content">
                 <h2 class="mb-5">Projects</h2>
-                <a data-toggle="modal" data-target="#exampleModalCenter">
-                    <div class="project-item">
 
+                <div class="project-item">
+                    <a data-toggle="modal" data-target="#exampleModalCenter">
                         <div class="project-scaffold">
 
                             <img class="project-image" src="assets/img/profile_john.jpg">
@@ -149,8 +149,90 @@
                             </div>
 
                         </div>
-                    </div>
-                </a>
+                    </a>
+                </div>
+
+                <div class="project-item">
+                    <a data-toggle="modal" data-target="#exampleModalCenter">
+                        <div class="project-scaffold">
+
+                            <img class="project-image" src="assets/img/profile_john.jpg">
+                            <div class="project-descript">
+                                <h3 class="mb-0">Chance: An App of Oddities</h3>
+                                <hr style="margin: 5px;" />
+                                <ul class="list-inline badge-icons" style="margin-bottom: 0px;">
+                                    <li class="list-inline-item badge-item"><i class="fab fa-html5"></i></li>
+                                    <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
+                                    <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
+                                    <li class="list-inline-item"><i class="fab fa-angular"></i></li>
+                                </ul>
+                                Yo this is a test asd s d assd da ds ad s dsa dsads d as d sa sd sda da d ds sda sad
+                                sadsads
+                                sadsadsa da ds ad sa da d sa ds d as d sa ds a d sad s ds ad as sd a ds adasdsdas ddsda
+                                asdsda dsad sa ds
+                                <br /><br />
+                                <div class="flex-shrink-0"><span class="date">Dec 2020 - Feb 2021 & Jan 2020 - Feb
+                                        2020</span></div>
+                            </div>
+
+                        </div>
+                    </a>
+                </div>
+
+                <div class="project-item">
+                    <a data-toggle="modal" data-target="#exampleModalCenter">
+                        <div class="project-scaffold">
+
+                            <img class="project-image" src="assets/img/profile_john.jpg">
+                            <div class="project-descript">
+                                <h3 class="mb-0">Chance: An App of Oddities</h3>
+                                <hr style="margin: 5px;" />
+                                <ul class="list-inline badge-icons" style="margin-bottom: 0px;">
+                                    <li class="list-inline-item badge-item"><i class="fab fa-html5"></i></li>
+                                    <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
+                                    <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
+                                    <li class="list-inline-item"><i class="fab fa-angular"></i></li>
+                                </ul>
+                                Yo this is a test asd s d assd da ds ad s dsa dsads d as d sa sd sda da d ds sda sad
+                                sadsads
+                                sadsadsa da ds ad sa da d sa ds d as d sa ds a d sad s ds ad as sd a ds adasdsdas ddsda
+                                asdsda dsad sa ds
+                                <br /><br />
+                                <div class="flex-shrink-0"><span class="date">Dec 2020 - Feb 2021 & Jan 2020 - Feb
+                                        2020</span></div>
+                            </div>
+
+                        </div>
+                    </a>
+                </div>
+
+                <div class="project-item">
+                    <a data-toggle="modal" data-target="#exampleModalCenter">
+                        <div class="project-scaffold">
+
+                            <img class="project-image" src="assets/img/profile_john.jpg">
+                            <div class="project-descript">
+                                <h3 class="mb-0">Chance: An App of Oddities</h3>
+                                <hr style="margin: 5px;" />
+                                <ul class="list-inline badge-icons" style="margin-bottom: 0px;">
+                                    <li class="list-inline-item badge-item"><i class="fab fa-html5"></i></li>
+                                    <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
+                                    <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
+                                    <li class="list-inline-item"><i class="fab fa-angular"></i></li>
+                                </ul>
+                                Yo this is a test asd s d assd da ds ad s dsa dsads d as d sa sd sda da d ds sda sad
+                                sadsads
+                                sadsadsa da ds ad sa da d sa ds d as d sa ds a d sad s ds ad as sd a ds adasdsdas ddsda
+                                asdsda dsad sa ds
+                                <br /><br />
+                                <div class="flex-shrink-0"><span class="date">Dec 2020 - Feb 2021 & Jan 2020 - Feb
+                                        2020</span></div>
+                            </div>
+
+                        </div>
+                    </a>
+                </div>
+
         </section>
         <hr class="m-0" />
         <!-- Awards-->
@@ -343,8 +425,9 @@
         aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
             <div class="modal-content" style="height: 500px;">
-                <div class="modal-body" >
-                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/jxMq36286YM" frameborder="0"></iframe>
+                <div class="modal-body">
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/jxMq36286YM"
+                        frameborder="0"></iframe>
                 </div>
             </div>
         </div>
