--- a/john.html
+++ b/john.html
@@ -83,7 +83,8 @@
                         <h3 class="mb-0">The University of Auckland</h3>
                         <div class="subheading mb-3">Bachelor of Engineer Honours</div>
                         <div>Software Engineering</div>
-                        <div>Clubs & Societies | Student Life, Unichurch, TBD</div>
+                        <div>Clubs & Societies | Student Life, Unichurch, Google Developer Student Club, Devs Society,
+                            Web Development & Consultancy Club, Software Engineering Student Association</div>
                         <p>GPA: 9.0</p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">Mar 2020 - Present</span></div>
@@ -461,7 +462,7 @@
     <div class="modal fade" id="vidModal">
         <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
             <div class="modal-content" style="height: 500px;">
-                <div class="modal-body">
+                <div class="modal-body" id="yt-player">
                     <iframe id="vidModalLink" width="100%" height="100%"
                         src="https://www.youtube.com/embed/jxMq36286YM?rel=0&autoplay=1&mute=1" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
